--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,23 @@
-body {
-    font-family: "Montesarrat", sans-serif;
+/* VARIABLES  */
+:root {
+    --color-principal: #fff;
+    --color-secondary: #329153;
 }
+
+/* ESTILOS GENERALES */
+html {
+    font-size: 10px;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: "Montesarrat", "Helvetica Neue", sans-serif;
+    font-size: 1.6rem;
+    background-color: var(--color-principal);
+}
+
+/* BARRA DECORATIVA */
+
+
+/* ESTRUCTURA Y LAYOUT */
