--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -559,14 +559,18 @@ body {
     margin: 1rem 0;
 }
 
-.highlights__author {
+.highlights__author,
+.main-video__author,
+.video__author {
     font-weight: 500;
     font-size: 1.1rem;
     text-transform: uppercase;
     color: var(--color-secondary);
 }
 
-.highlights__date {
+.highlights__date,
+.main-video__date,
+.video__date {
     font-weight: 400;
     text-transform: uppercase;
     font-size: 1.1rem;
@@ -593,7 +597,9 @@ body {
 }
 
 .footer-post__views,
-.footer-post__comments {
+.footer-post__comments,
+.main-video__views,
+.main-video__comments {
     display: inline-block;
     font-weight: 400;    
     font-size: 1.1rem;
@@ -601,7 +607,9 @@ body {
 }
 
 .footer-post__views .fa-solid,
-.footer-post__comments .fa-solid {
+.footer-post__comments .fa-solid,
+.main-video__views > .fa-solid,
+.main-video__comments > .fa-solid {
     margin-right: 0.2rem;
     font-size: 1.2rem;
 }
@@ -659,6 +667,101 @@ body {
 /* ESTILOS VIDEOS */
 .layout__videos {
     grid-area: video;
+    width: 100%;    
+}
+
+.videos__container {
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+}
+
+.videos__main-video {
+    flex-basis: 65%;
+    padding-bottom: 3rem;
+}
+
+.main-video__yt-video {
+    width: 100%;
+    height: 40rem;
+    margin-bottom: 2rem;
+}
+
+.main-video__yt-video > iframe {
+    width: 100%;
+    height: 100%;
+}
+
+.main-video__title {
+    font-size: 2.4rem;
+    margin-bottom: 1rem;
+}
+
+.main-video__info {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 2rem;
+    border-bottom: 1px solid var(--color-bg-marquee);
+}
+
+.main-video__info-container {
+    display: flex;
+    flex-direction: row;
+    gap: 1rem;
+}
+
+.main-video__info-container a {
+    display: inline;
+}
+
+.videos__list {
+    flex-basis: 35%;
+}
+
+.videos__video {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--color-bg-marquee);
+    padding-bottom: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+.video__detail {
+    flex-basis: 75%;
+}
+
+.video__title {
+    font-weight: 700;
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+}
+
+.video__link {
+    color: var(--color-title);
+    transition: all 300ms ease-in-out;
+}
+
+.video__title:hover > .video__link {
+    color: var(--color-secondary);
+}
+
+.video__info {
+    display: flex;
+    gap: 1rem;
+}
+
+.video__image {
+    overflow: hidden;    
+}
+
+.video__img {
+    transition: all 300ms ease;
+}
+
+.video__image:hover .video__img {
+    transform: scale(1.1);
 }
 
 /* ESTILOS CAROUSEL */
