--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -563,7 +563,9 @@ body {
 
 .highlights__author,
 .main-video__author,
-.video__author {
+.video__author,
+.main-post__author,
+.news__author {
     font-weight: 500;
     font-size: 1.1rem;
     text-transform: uppercase;
@@ -572,7 +574,9 @@ body {
 
 .highlights__date,
 .main-video__date,
-.video__date {
+.video__date,
+.main-post__date,
+.news__date {
     font-weight: 400;
     text-transform: uppercase;
     font-size: 1.1rem;
@@ -588,20 +592,24 @@ body {
 }
 
 .highlights__footer-post,
-.footer-post__container {
+.footer-post__container,
+.footer-info__container {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;    
 }
 
-.footer-post__container {
+.footer-post__container,
+.footer-info__container  {
     gap: 1rem;
 }
 
 .footer-post__views,
 .footer-post__comments,
 .main-video__views,
-.main-video__comments {
+.main-video__comments,
+.main-post__views,
+.main-post__comments {
     display: inline-block;
     font-weight: 400;    
     font-size: 1.1rem;
@@ -611,7 +619,9 @@ body {
 .footer-post__views .fa-solid,
 .footer-post__comments .fa-solid,
 .main-video__views > .fa-solid,
-.main-video__comments > .fa-solid {
+.main-video__comments > .fa-solid,
+.main-post__views > .fa-solid,
+.main-post__comments > .fa-solid {
     margin-right: 0.2rem;
     font-size: 1.2rem;
 }
@@ -620,7 +630,8 @@ body {
     display: inline;
 }
 
-.footer-post__fread-more {
+.footer-post__fread-more,
+.main_post__read-more {
     color: var(--color-text-marquee);
     border: 1px solid var(--color-text-marquee);
     font-weight: 500;
@@ -630,14 +641,15 @@ body {
     margin-bottom: 2rem;
 }
 
-.footer-post__fread-more:hover {
+.footer-post__fread-more:hover,
+.main_post__read-more:hover {
     border: 1px solid var(--color-secondary);
     color: var(--color-secondary);
 }
 
 
 /* ESTILOS SUBENCABEZADOS */
-.news__subheader,
+.__subheader,
 .games__subheader,
 .login__subheader,
 .posts__subheader,
@@ -653,7 +665,7 @@ body {
 }
 
 .subheader__title,
-.news__title,
+.__title,
 .list-header__title,
 .last-reviews__link-title {
     display: inline;
@@ -844,6 +856,151 @@ body {
 /* ESTILOS CONTENIDO PRINCIPAL - MAIN */
 .layout__main {
     grid-area: main;
+    margin-right: 3rem;
+}
+
+/* ESTILOS NOTICIAS */
+.main__news {
+    width: 100%;
+}
+
+.news__main-post {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 3rem;
+    margin-bottom: 2rem;
+    padding-bottom: 0;
+    border-bottom: 1px solid var(--color-bg-marquee);
+}
+
+.main-post__image {
+    position: relative;
+    overflow: hidden;
+    flex-basis: 50%;
+}
+
+.main-post__img {
+    width: 100%;
+    height: 20rem;
+    transition: all 300ms ease;
+}
+
+.main-post__img:hover {
+    transform: scale(1.1);
+}
+
+.main-post__container-category {
+    position: absolute;
+    left: 0;
+    bottom: 3rem;
+    padding: 0.5rem 1rem;
+    background-color: var(--color-secondary);
+    transition: all 300ms ease;
+}
+
+.main-post__container-category:hover {
+    background-color: var(--color-bg-navbar);
+}
+
+.main-post__category {
+    display: block;
+    font-size: 1.1rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: var(--color-principal);
+}
+
+.main-post__info {
+    flex-basis: 50%;
+}
+
+.main-post__title {
+    font-size: 2rem;
+    text-transform: uppercase;
+    margin-bottom: 1rem;
+}
+
+.main-post__link-title {
+    color: var(--color-title);
+    transition: all 300ms ease;
+}
+
+.main-post__title:hover .main-post__link-title {
+    color: var(--color-secondary);
+}
+
+.main-post__meta,
+.news__data {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-bottom: 1rem;
+}
+
+.main-post__description {
+    font-size: 1.3rem;
+    color: var(--color-title);
+    margin-bottom: 1rem;
+}
+
+.main-post__footer-info {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.news__list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+    margin-bottom: 6rem;
+}
+
+.news__post {
+    display: flex;
+    gap: 1rem;
+    flex-basis: calc(50% - 2rem);
+}
+
+.news__image {
+    overflow: hidden;
+    width: 7.5rem;
+    height: 7.5rem;
+}
+
+.news__img {
+    width: 100%;
+    height: 100%;
+    transition: all 300ms;
+}
+
+.news__image:hover .news__img {
+    transform: scale(1.1);
+}
+
+.news__detail {
+    width: 75%;
+}
+
+.news__title-post {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.news__link-title {
+    color: var(--color-title);
+    transition: all 300ms ease;
+}
+
+.news__title-post:hover .news__link-title {
+    color: var(--color-secondary);
+}
+
+.news__data {
+    justify-content: left;
+    gap: 1rem;
 }
 
 /* ESTILOS BARRA LATERAL - ASIDE */
