--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -489,34 +489,40 @@ body {
     margin-bottom: 3rem;        
 }
 
-.highlights__posts {
+.highlights__posts,
+.posts__container {
     width: 100%;
     display: flex;
     margin-bottom: 3rem;
     gap: 3rem;
 }
 
-.highlights__post {
+.highlights__post,
+.posts__post {
     flex-basis: 33%;
     height: 100%;
     border-bottom: 1px solid var(--color-bg-marquee);
 }
 
-.highlights__image {
+.highlights__image,
+.post__container-image {
     position: relative;
     overflow: hidden;
 }
 
-.highlights__img {
+.highlights__img,
+.post__img {
     transition: all 300ms ease-in-out;
 }
 
-.highlights__img:hover {
+.highlights__img:hover,
+.post__img:hover {
     transform: scale(1.1);
 }
 
 .highlights__category,
-.game__container-category {
+.game__container-category,
+.post__container-category {
     position: absolute;
     left: 0;
     bottom: 1rem;
@@ -527,12 +533,14 @@ body {
 }
 
 .highlights__category:hover,
-.game__container-category:hover {
+.game__container-category:hover,
+.post__container-category:hover {
     background-color: var(--color-bg-navbar);
 }
 
 .highlights__name-category,
-.game__category {
+.game__category,
+.post__category {
     display: block;
     font-weight: 400;
     font-size: 1.1rem;
@@ -540,23 +548,27 @@ body {
     color: var(--color-principal);
 }
 
-.highlights__title {
+.highlights__title,
+.post__title {
     font-size: 1.9rem;
     text-transform: uppercase;
     margin-bottom: 1rem;
     margin-top: 1.5rem;
 }
 
-.highlights__link {
+.highlights__link,
+.post__link {
     color: var(--color-title);
     transition: all 300ms ease-in-out;
 }
 
-.highlights__title:hover > .highlights__link  {
+.highlights__title:hover > .highlights__link,
+.post__title:hover > .post__link  {
     color: var(--color-secondary);
 }
 
-.highlights__meta {
+.highlights__meta,
+.post__meta {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -568,7 +580,8 @@ body {
 .main-video__author,
 .video__author,
 .main-post__author,
-.news__author {
+.news__author,
+.post__author {
     font-weight: 500;
     font-size: 1.1rem;
     text-transform: uppercase;
@@ -579,7 +592,8 @@ body {
 .main-video__date,
 .video__date,
 .main-post__date,
-.news__date {
+.news__date,
+.post__date {
     font-weight: 400;
     text-transform: uppercase;
     font-size: 1.1rem;
@@ -587,7 +601,8 @@ body {
     color: var(--color-text-marquee);
 }
 
-.highlights__description {
+.highlights__description,
+.post__description {
     font-weight: 500;
     color: var(--color-title);
     font-size: 1.3rem;
@@ -596,14 +611,16 @@ body {
 
 .highlights__footer-post,
 .footer-post__container,
-.footer-info__container {
+.footer-info__container,
+.post__footer-post {
     display: flex;
     justify-content: space-between;
     margin-bottom: 1rem;    
 }
 
 .footer-post__container,
-.footer-info__container  {
+.footer-info__container,
+.post__footer-post  {
     gap: 1rem;
 }
 
@@ -612,7 +629,9 @@ body {
 .main-video__views,
 .main-video__comments,
 .main-post__views,
-.main-post__comments {
+.main-post__comments,
+.footer-post__views,
+.footer-post__comments {
     display: inline-block;
     font-weight: 400;    
     font-size: 1.1rem;
@@ -624,17 +643,20 @@ body {
 .main-video__views > .fa-solid,
 .main-video__comments > .fa-solid,
 .main-post__views > .fa-solid,
-.main-post__comments > .fa-solid {
+.main-post__comments > .fa-solid,
+.footer-post__views > .fa-solid,
+.footer-post__comments > .fa-solid {
     margin-right: 0.2rem;
     font-size: 1.2rem;
 }
 
-.footer-post__comments > a {
+.footer-post__comments > a{
     display: inline;
 }
 
 .footer-post__fread-more,
-.main_post__read-more {
+.main_post__read-more,
+.post__read-more {
     color: var(--color-text-marquee);
     border: 1px solid var(--color-text-marquee);
     font-weight: 500;
@@ -645,7 +667,8 @@ body {
 }
 
 .footer-post__fread-more:hover,
-.main_post__read-more:hover {
+.main_post__read-more:hover,
+.post__read-more:hover {
     border: 1px solid var(--color-secondary);
     color: var(--color-secondary);
 }
@@ -1071,6 +1094,36 @@ body {
 .game__title:hover .game__link-title {
     text-shadow: 0 0 5px black;
 }
+
+/* ESTILOS ULTIMOS ARTICULOS */
+.main__posts {
+    width: 100%;
+    margin-bottom: 3rem;
+}
+
+.posts__list-header {
+    display: flex;
+    flex-direction: row;
+    gap: 0.5rem;
+}
+
+.list-header--small {
+    color: var(--color-principal);
+    font-size: 1.1rem;
+    text-transform: uppercase;
+    padding: 0.5rem;
+    white-space: nowrap;
+    font-weight: 400;
+}
+
+.posts__container {
+    flex-wrap: wrap;
+}
+
+.posts__post {
+    flex-basis: calc(50% - 2rem);
+}
+
 
 /* ESTILOS BARRA LATERAL - ASIDE */
 .layout__aside {
