--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1459,3 +1459,21 @@ body {
 .list-reviews__bar--bar5 {
     width: 90%;
 }
+
+/* ESTILOS BOTON MAIN */
+.posts__read-more {
+    width: 100%;
+    text-align: center;
+    border: 1px solid var(--color-bg-navbar);
+    font-weight: 400;    
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    padding: 0.4rem;
+    transition: all 300ms ease;
+}
+
+.posts__read-more:hover {
+    background-color: var(--color-secondary);
+    color: var(--color-principal);
+    border-color: var(--color-secondary);
+}
